# capital-gains

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  environment.yaml  input.sample.jsonl  pyproject.toml  requirements-development.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create-command.sh
.github/: pull_request_template.md
.github/issue_template/: bug_report.yaml  feature_request.yaml  improvement_request.yaml
.github/workflows/: development.yaml
capital_gains/: __init__.py  cli.py  models.py
capital_gains/calculators/: __init__.py  base.py  tax.py
capital_gains/operations/: __init__.py  base.py  buy.py  sell.py
capital_gains/states/: __init__.py  base.py  portfolio.py
docs/: changelog.md  conf.py  index.md  overview.md  usage.md
docs/_static/styles/: custom.css
docs/_templates/: sidebar-icon-links.html
tests/: conftest.py  test_calculators_tax.py  test_models.py  test_operations_buy.py  test_operations_sell.py  test_states_portfolio.py  test_use_cases.py
tests/data/: input.1.jsonl  input.2.jsonl  input.3.jsonl  input.4.jsonl  input.5.jsonl  input.6.jsonl  input.7.jsonl  input.8.jsonl  input.9.jsonl  output.0.jsonl  output.2.jsonl  output.3.jsonl  output.5.jsonl  output.6.jsonl  output.7.jsonl  output.8.jsonl
